mangasee: decrease rate limiter

--- a/.github/workflows/build_push.yml
+++ b/.github/workflows/build_push.yml
@@ -114,7 +114,7 @@ jobs:
     needs:
       - build_multisrc
       - build_individual
-    if: "github.repository == 'tachiyomiorg/tachiyomi-extensions'"
+    #if: "github.repository == 'tachiyomiorg/tachiyomi-extensions'"
     runs-on: ubuntu-latest
     steps:
       - name: Download APK artifacts
